--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,14 +1,24 @@
 <ion-header>
   <ion-navbar>
     <ion-title>
-      Ionic Blank
+      Home
     </ion-title>
   </ion-navbar>
 </ion-header>
 
 <ion-content padding>
-  The world is your oyster.
   <p>
-    If you get lost, the <a href="http://ionicframework.com/docs/v2">docs</a> will be your guide.
+    Welcome to the charity app.
   </p>
+
+  <button ion-button (click)="navToLogin()" outline block large>
+    Login
+    <ion-icon name="md-arrow-dropright-circle" style="padding-left: 3px;"></ion-icon>
+  </button>
+
+  <button ion-button (click)="navToRegistration()" color="light" outline block>
+    Register
+    <ion-icon name="md-arrow-dropright-circle" style="padding-left: 3px;"></ion-icon>
+  </button>
+  
 </ion-content>
