navigation from explore/charity list --> charity profile is functional

--- a/src/pages/charity-profile/charity-profile.html
+++ b/src/pages/charity-profile/charity-profile.html
@@ -11,6 +11,6 @@
           Welcome to the charity app.
         </p>
         <!-- parsed from charity edit page that needs to be written -->
-        <p>Charity Name</p><br><br>
-        <p>Charity Bio</p><br><br>
+        <p>{{charityname}}</p><br><br>
+        <p>{{charitybio}}</p><br><br>
       </ion-content>
