--- a/src/pages/explore/explore.html
+++ b/src/pages/explore/explore.html
@@ -9,16 +9,17 @@
   <ion-content padding>
     <p>Welcome to the charity app.</p>
     <ion-list inset>
-    <ion-card>
+    <ion-card (click)="charitypage()">
         <ion-card-header>
             Charity Name
+            {{charityname}}
         </ion-card-header>
         
         <ion-card-content>
             Information about the charity
         </ion-card-content>              
     </ion-card>
-    <ion-card>
+    <ion-card (click)="charitypage()">
         <ion-card-header>
             Charity Name
         </ion-card-header>
@@ -27,7 +28,7 @@
             Information about the charity
         </ion-card-content>           
     </ion-card>
-    <ion-card>
+    <ion-card (click)="charitypage()">
         <ion-card-header>
            Charity Name
         </ion-card-header>
@@ -37,7 +38,7 @@
         </ion-card-content>
         
     </ion-card>
-    <ion-card>
+    <ion-card (click)="charitypage()">
         <ion-card-header>
             Charity Name
         </ion-card-header>
@@ -46,7 +47,7 @@
             Information about the charity
         </ion-card-content>           
     </ion-card>
-    <ion-card>
+    <ion-card (click)="charitypage()">
         <ion-card-header>
             Charity Name
         </ion-card-header>           
@@ -54,7 +55,7 @@
             Information about the charity
         </ion-card-content>           
     </ion-card>
-    <ion-card>
+    <ion-card (click)="charitypage()">
         <ion-card-header>
             Charity Name
         </ion-card-header>          
