charity list and charity profiles now work from the array wooooooo

--- a/src/pages/charity-profile/charity-profile.html
+++ b/src/pages/charity-profile/charity-profile.html
@@ -1,4 +1,4 @@
-<ion-header>
+<!-- <ion-header>
         <ion-navbar>
           <ion-title>
             Charity Name
@@ -10,7 +10,6 @@
         <p>
           Welcome to the charity app.
         </p>
-        <!-- parsed from charity edit page that needs to be written -->
         <p>{{charityname}}</p><br><br>
         <p>{{charitybio}}</p><br><br>
-      </ion-content>
+      </ion-content> -->
