--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -21,4 +21,8 @@
     <ion-icon name="md-arrow-dropright-circle" style="padding-left: 3px;"></ion-icon>
   </button>
   
+  <button ion-button (click)="navToCharityRegistration()" color="secondary" outline block small>
+      Register a Charity
+      <ion-icon name="md-arrow-dropright-circle" style="padding-left: 3px;"></ion-icon>
+    </button>
 </ion-content>
